[package]
name = "ddnet-engine-shared"
version = "0.0.1"
edition = "2021"
rust-version = "1.63"
publish = false
license = "Zlib"

[lib]
crate-type = ["rlib", "staticlib"]
path = "lib.rs"

[dependencies]
ddnet-base = { path = "../../base" }
ddnet-engine = { path = ".." }

cxx = "=1.0.71"
libtw2-common = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-packer = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-snapshot = { git = "https://github.com/heinrich5991/libtw2" }
libtw2-warn = { git = "https://github.com/heinrich5991/libtw2" }
uuid = "1.0"

[dev-dependencies]
ddnet-test = { path = "../../rust-bridge/test", features = ["link-test-libraries"] }
