[package]
name = "ddnet-engine-shared"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
publish = false
license = "Zlib"

[lib]
crate-type = ["rlib", "staticlib"]
path = "lib.rs"

[dependencies]
ddnet-base = { path = "../../base" }
ddnet-engine = { path = ".." }

cxx = { workspace = true }

[dev-dependencies]
ddnet-test = { path = "../../rust-bridge/test", features = ["link-test-libraries"] }
